  slash-sensitive).

* Improvements on Windows (from `Ionel Maries Cristian
  <http://ionelmc.wordpress.com/>`_).

* Fixed problem with not being able to install private git repositories.

* Make ``pip zip`` zip all its arguments, not just the first.

* Fix some filename issues on Windows.

* Allow the ``-i`` and ``--extra-index-url`` options in requirements
  files.

0.3.1
-----

* Improved virtualenv restart and various path/cleanup problems on win32.

* Fixed a regression with installing from svn repositories (when not
  using ``-e``).

* Fixes when installing editable packages that put their source in a
  subdirectory (like ``src/``).

* Improve ``pip -h``

0.3
---

* Added support for editable packages created from Git, Mercurial and Bazaar
  repositories and ability to freeze them. Refactored support for version
  control systems.

* Do not use ``sys.exit()`` from inside the code, instead use a
  return.  This will make it easier to invoke programmatically.

* Put the install record in ``Package.egg-info/installed-files.txt``
  (previously they went in
  ``site-packages/install-record-Package.txt``).

* Fix a problem with ``pip freeze`` not including ``-e svn+`` when an
  svn structure is peculiar.

* Allow ``pip -E`` to work with a virtualenv that uses a different
  version of Python than the parent environment.

* Fixed Win32 virtualenv (``-E``) option.

* Search the links passed in with ``-f`` for packages.

* Detect zip files, even when the file doesn't have a ``.zip``
  extension and it is served with the wrong Content-Type.

* Installing editable from existing source now works, like ``pip
  install -e some/path/`` will install the package in ``some/path/``.
  Most importantly, anything that package requires will also be
  installed by pip.

* Add a ``--path`` option to ``pip un/zip``, so you can avoid zipping
  files that are outside of where you expect.

* Add ``--simulate`` option to ``pip zip``.

0.2.1
-----
