@@ -22,6 +22,9 @@ hg tip
 * Allow the ``-i`` and ``--extra-index-url`` options in requirements
   files.
 
+* Fix the way bundle components are unpacked and moved around, to make
+  bundles work.
+
 0.3.1
 -----
 
